<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.taraneem.MainFragment"
        android:label="@string/services"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/mainToBooking"
            app:destination="@id/bookingFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.taraneem.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/bookingFragment"
        android:name="com.taraneem.BookingFragment"
        android:label="@string/booking"
        tools:layout="@layout/fragment_booking">
        <argument
            android:name="bookingType"
            android:defaultValue="Default"
            app:argType="com.taraneem.data.Booking$BookingType" />
        <action
            android:id="@+id/bookingToInfo"
            app:destination="@id/infoFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.taraneem.ProfileFragment"
        android:label="@string/personalInfo"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.taraneem.InfoFragment"
        android:label="@string/bookingInfo"
        tools:layout="@layout/fragment_info" >
        <action
            android:id="@+id/infoToMain"
            app:destination="@id/mainFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/userBookingsFragment"
        android:name="com.taraneem.UserBookingsFragment"
        android:label="@string/bookings"
        tools:layout="@layout/fragment_user_bookings" />
</navigation>