<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/languageView"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/choose_language"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:id="@+id/englishLang"
            android:text="@string/english"
            android:textStyle="bold"
            android:background="@drawable/item_background"
            android:textColor="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:id="@+id/arabicLang"
            android:text="@string/arabic"
            android:textStyle="bold"
            android:background="@drawable/item_background"
            android:textColor="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/can_change_later"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- revert back by changing
     style line to style="?android:attr/progressBarStyle" -->
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loginProgressBar"
        style="@style/logoProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/logo" />

        <View
            android:layout_width="match_parent"
            android:background="@color/colorBlack"
            android:layout_height="0.5dp"> </View>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginBottom="32dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/registerTextView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="8dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/register" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="8dp"
                android:fontFamily="@font/roboto_black"
                android:layout_height="match_parent"
                android:text="@string/login" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailTV"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            style="@style/InputEditTextStyle" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordTV"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:inputType="textPassword"
            style="@style/InputEditTextStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/login"
            android:background="@drawable/button_colored"
            android:textColor="@color/colorWhite" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>







